--- a/.htaccess
+++ b/.htaccess
@@ -18,10 +18,10 @@ RewriteRule ^feed-type([^-]+)\.xml$       feed\.php\?type=$1 [L]
 RewriteRule ^feed\.xml$                 feed\.php [L]
 
 # 文章类的要放在前面，要不会跟商品的冲突
-RewriteRule ^article-([0-9a-zA-Z_]+)-([0-9]+)-(.+)-([a-zA-Z]+)[\/]*$  article_cat\.php\?defurl=$1&page=$2&sort=$3&order=$4  [QSA,L]
-RewriteRule ^article-([0-9a-zA-Z_]+)-([0-9]+)-(.+)[\/]*$              article_cat\.php\?defurl=$1&page=$2&keywords=$3 [QSA,L]
-RewriteRule ^article-([0-9a-zA-Z_]+)-([0-9]+)[\/]*$                   article_cat\.php\?defurl=$1&page=$2   [QSA,L]
-RewriteRule ^article-([0-9a-zA-Z_]+)[\/]*$                            article_cat\.php\?defurl=$1   [QSA,L]
+RewriteRule ^page\/([0-9a-zA-Z_]+)-([0-9]+)-(.+)-([a-zA-Z]+)[\/]*$  article_cat\.php\?defurl=$1&page=$2&sort=$3&order=$4  [QSA,L]
+RewriteRule ^page\/([0-9a-zA-Z_]+)-([0-9]+)-(.+)[\/]*$              article_cat\.php\?defurl=$1&page=$2&keywords=$3 [QSA,L]
+RewriteRule ^page\/([0-9a-zA-Z_]+)-([0-9]+)[\/]*$                   article_cat\.php\?defurl=$1&page=$2   [QSA,L]
+RewriteRule ^page\/([0-9a-zA-Z_]+)[\/]*$                            article_cat\.php\?defurl=$1   [QSA,L]
 RewriteRule ^article-(?:[0-9a-zA-Z_]+)/([0-9]+)(.*)\.html$                                article\.php\?id=$1   [QSA,L]
 
 RewriteRule ^article_cat-([0-9]+)-([0-9]+)-(.+)-([a-zA-Z]+)(.*)\.html$  article_cat\.php\?id=$1&page=$2&sort=$3&order=$4  [QSA,L]
